--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
 <body>
  <header>
     <nav>
-    <a href="">webstudio</a>
+    <a href="./index.html">webstudio</a>
     <ul>
-        <li><a href="">studio</a></li>
+        <li><a href="">Studio</a></li>
         <li><a href="">Portfolio</a></li>
         <li><a href="">Contacts</a> </li>
     </ul>
     </nav>
+    <address>
     <ul>
-        <li>info@devstudio.com</li>
-        <li>+11 (000) 111-11-11</li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
     </ul>
+    </address>
  </header>   
  <main>
     <section>
-        <h1>Effective Solutions<br>for Your Business</h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
     </section>
     <section>
+        <h2>Feature</h2>
         <ul>
             <li>
                 <h3>Strategy</h3>
@@ -49,27 +52,27 @@
     <section>
         <h2>What are we doing</h2>
         <ul>
-            <li><img src="./images/Rectangle 1.jpg" alt="" width="360" height="300"/></li>
-            <li><img src="./images/Rectangle 2.jpg" alt="" width="360" height="300"/></li>
-            <li><img src="./images/Rectangle 3.jpg" alt="" width="360" height="300"/></li>
+            <li><img src="./images/Rectangle 1.jpg" alt="Site visit statistics" width="360" height="300"/></li>
+            <li><img src="./images/Rectangle 2.jpg" alt="Mobile app support" width="360" height="300"/></li>
+            <li><img src="./images/Rectangle 3.jpg" alt="Recommended for you" width="360" height="300"/></li>
         </ul>
     </section>
     <section>
         <h2>Our Team</h2>
         <ul>
-            <li><img src="./images/img1.jpg" alt="" width="264" height="260"/>
+            <li><img src="./images/img1.jpg" alt="Photo Mark Guerrero" width="264" height="260"/>
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
-            <li><img src="./images/img2.jpg" alt="" width="264" height="260"/>
+            <li><img src="./images/img2.jpg" alt="Photo Tom Ford" width="264" height="260"/>
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
-            <li><img src="./images/img3.jpg" alt="" width="264" height="260"/>
+            <li><img src="./images/img3.jpg" alt="Photo Camila Garcia" width="264" height="260"/>
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li> 
-            <li><img src="./images/img4.jpg" alt="" width="264" height="260"/>
+            <li><img src="./images/img4.jpg" alt="Photo Daniel Wilson" width="264" height="260"/>
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>  
