--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
  <header>
     <nav>
-    <a href="./index.html">webstudio</a>
+    <a href="./index.html">WebStudio</a>
     <ul>
         <li><a href="">Studio</a></li>
         <li><a href="">Portfolio</a></li>
@@ -80,8 +80,8 @@
     </section>
  </main>
  <footer>
-    <a href="">webstudio</a>
-    <p>Increase the flow of customers and<br> sales for your business with digital<br> marketing & growth solutions.
+    <a href="./index.html">WebStudio</a>
+    <p>Increase the flow of customers and  sales for your business with digital marketing & growth solutions.
     </p>
  </footer>
 </body>
